--- a/src/navigation/menubar.stories.mdx
+++ b/src/navigation/menubar.stories.mdx
@@ -1,9 +1,53 @@
-import React from 'react';
-import { useAriaNavigation, NavigationProps } from '.';
+import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs';
+import {
+  Menubar,
+  NavigationPropsComponent,
+  NavigationReturnPropsItemProps,
+  NavigationReturnPropsMenuItemProps,
+  NavigationReturnPropsMenubarProps,
+  NavigationReturnPropsSubmenuProps,
+} from './menubar.component';
 
-import { StyledMenu, StyledNav, StyledSubmenu } from './menubar.styles';
+<Meta title="Aria Component/Menubar" />
 
-export const Menubar: React.FC<NavigationProps> = () => {
+## Example
+
+<Canvas>
+  <Menubar />
+</Canvas>
+
+## Setup
+
+The `useAriaNavigation` hook expects the following parameters:
+
+<ArgsTable of={NavigationPropsComponent} sort="requiredFirst" />
+
+The hook returns an object with the following values:
+
+### itemProps
+
+<ArgsTable of={NavigationReturnPropsItemProps} />
+
+### menuItemProps
+
+<ArgsTable of={NavigationReturnPropsMenuItemProps} />
+
+### menubarProps
+
+<ArgsTable of={NavigationReturnPropsMenubarProps} />
+
+### submenuProps
+
+<ArgsTable of={NavigationReturnPropsSubmenuProps} />
+
+## Component
+
+In order to create a fully accessible implementation of a modal, your component should look like the following:
+
+```jsx
+import { useAriaNavigation } from '@actum/aria-hooks';
+
+const Navigation = () => {
   const items = [
     { title: 'Home' },
     {
@@ -23,8 +67,8 @@ export const Menubar: React.FC<NavigationProps> = () => {
     });
 
   return (
-    <StyledNav>
-      <StyledMenu {...menubarProps}>
+    <nav>
+      <ul {...menubarProps}>
         {items.map((item, idx) => (
           <li key={item.title} {...itemProps}>
             {item.items ? (
@@ -47,8 +91,8 @@ export const Menubar: React.FC<NavigationProps> = () => {
                 {item.title}
               </a>
             )}
-            {item.items && (
-              <StyledSubmenu {...submenuProps('submenu')} className="submenu">
+            {item.items > 0 && (
+              <ul {...submenuProps('submenu')} className="submenu">
                 {item.items.map((childItem) => (
                   <li key={childItem.title} {...itemProps}>
                     <a href="#" {...menuItemProps(-1)}>
@@ -56,16 +100,12 @@ export const Menubar: React.FC<NavigationProps> = () => {
                     </a>
                   </li>
                 ))}
-              </StyledSubmenu>
+              </ul>
             )}
           </li>
         ))}
-      </StyledMenu>
-    </StyledNav>
+      </ul>
+    </nav>
   );
 };
-
-export default {
-  title: 'Aria Component/Menubar',
-  component: Menubar,
-};
+```
