--- a/src/hooks/modal/modal.stories.mdx
+++ b/src/hooks/modal/modal.stories.mdx
@@ -21,7 +21,7 @@ The hook returns an object with the following values:
 
 ## Component
 
-In order to create a fully accessible implementation of a modal, your component should look like the following:
+In order to create a fully accessible implementation of a modal using `@actum/aria-hooks`, your component should look like the following:
 
 ```jsx
 import { useAriaModal } from '@actum/aria-hooks';
@@ -29,9 +29,9 @@ import { useAriaModal } from '@actum/aria-hooks';
 const Modal = () => {
   const [isOpen, setOpen] = React.useState(false);
 
-  const { modalProps, closeButtonProps, descriptionSpanProps } = useAriaModal({
+  const { modalProps, closeButtonProps, descriptionTextProps } = useAriaModal({
     isOpen,
-    onDismiss: () => setModalOpen(false),
+    onClose: () => setModalOpen(false),
     description: 'A cool modal',
     id: 'modal-test-storybook',
   });
@@ -42,7 +42,7 @@ const Modal = () => {
 
       <div className={`backdrop ${isOpen ? '' : 'backdrop--hidden'}`}>
         <div className="modal" {...modalProps}>
-          <h1 {...descriptionSpanProps}>Modal Title</h1>
+          <h1 {...descriptionTextProps}>Modal Title</h1>
           <button {...closeButtonProps}>Close</button>
         </div>
       </div>
