--- a/src/hooks/tooltip/tooltip.stories.mdx
+++ b/src/hooks/tooltip/tooltip.stories.mdx
@@ -35,7 +35,7 @@ The hook returns an object with the following values:
 In order to create a fully accessible implementation of a tooltip, your component should look like the following:
 
 ```jsx
-import { useAriaToolTip } from '@actum/aria-hooks';
+import { useAriaToolTip } from '@actum-digital/aria-hooks';
 
 export const Tooltip = () => {
   const [isShowing, setIsShowing] = useState(false);
