--- a/src/hooks/drawer/drawer.stories.mdx
+++ b/src/hooks/drawer/drawer.stories.mdx
@@ -28,7 +28,7 @@ The hook returns an object with the following values:
 In order to create a fully accessible implementation of a drawer, your component should look like the following:
 
 ```jsx
-import { useAriaDrawer } from '@actum/aria-hooks';
+import { useAriaDrawer } from '@actum-digital/aria-hooks';
 
 const Drawer = () => {
   const [isOpen, setOpen] = React.useState(false);
