--- a/src/hooks/navigation/menubar.stories.mdx
+++ b/src/hooks/navigation/menubar.stories.mdx
@@ -45,7 +45,7 @@ The hook returns an object with the following values:
 In order to create a fully accessible implementation of a modal, your component should look like the following:
 
 ```jsx
-import { useAriaNavigation } from '@actum/aria-hooks';
+import { useAriaNavigation } from '@actum-digital/aria-hooks';
 
 const Navigation = () => {
   const items = [
@@ -71,7 +71,7 @@ const Navigation = () => {
       <ul {...menubarProps}>
         {items.map((item, idx) => (
           <li key={item.title} {...itemProps}>
-            {item.items ? (
+            {item.items && item.items.length > 0 ? (
               <>
                 <span {...menuItemProps(idx, true)}>
                   {item.title}
@@ -87,17 +87,13 @@ const Navigation = () => {
                 </span>
               </>
             ) : (
-              <a href="#" {...menuItemProps(idx, false)}>
-                {item.title}
-              </a>
+              <a {...menuItemProps(idx, false)}>{item.title}</a>
             )}
-            {item.items > 0 && (
+            {item.items && item.items.length > 0 && (
               <ul {...submenuProps('submenu')} className="submenu">
                 {item.items.map((childItem) => (
                   <li key={childItem.title} {...itemProps}>
-                    <a href="#" {...menuItemProps(-1)}>
-                      {childItem.title}
-                    </a>
+                    <a {...menuItemProps(-1)}>{childItem.title}</a>
                   </li>
                 ))}
               </ul>
