Polish design to be brand-like, phase one

--- a/src/hooks/drawer/drawer.stories.mdx
+++ b/src/hooks/drawer/drawer.stories.mdx
@@ -7,6 +7,10 @@ import {
 
 <Meta title="Aria Component/Drawer" />
 
+# Drawer
+
+Component that is hidden by default and opened upon an action, usually a button click. Most commonly it contains some sort of navigation or filters.
+
 ## Example
 
 <Canvas>
