--- a/src/hooks/listbox/listbox.stories.mdx
+++ b/src/hooks/listbox/listbox.stories.mdx
@@ -9,6 +9,10 @@ import {
 
 <Meta title="Aria Component/Listbox" />
 
+# Listbox
+
+General information about the component.
+
 ## Example
 
 <Canvas>
