--- a/src/hooks/modal/modal.stories.mdx
+++ b/src/hooks/modal/modal.stories.mdx
@@ -3,6 +3,10 @@ import { Modal, ModalHookProps, ModalHookReturnProps } from './modal.component';
 
 <Meta title="Aria Component/Modal" />
 
+# Modal
+
+General information about the component.
+
 ## Example
 
 <Canvas>
