--- a/src/hooks/navigation/menubar.stories.mdx
+++ b/src/hooks/navigation/menubar.stories.mdx
@@ -10,6 +10,10 @@ import {
 
 <Meta title="Aria Component/Menubar" />
 
+# Navigation
+
+General information about the component.
+
 ## Example
 
 <Canvas>
