--- a/src/hooks/tooltip/tooltip.stories.mdx
+++ b/src/hooks/tooltip/tooltip.stories.mdx
@@ -8,6 +8,10 @@ import {
 
 <Meta title="Aria Component/Tooltip" />
 
+# Tooltip
+
+General information about the component.
+
 ## Example
 
 <Canvas>
