Add short description about each component

--- a/src/hooks/drawer/drawer.stories.mdx
+++ b/src/hooks/drawer/drawer.stories.mdx
@@ -9,7 +9,9 @@ import {
 
 # Drawer
 
-Component that is hidden by default and opened upon an action, usually a button click. Most commonly it contains some sort of navigation or filters.
+Component that is hidden by default and opened upon an action, usually a button click.
+
+Most commonly it contains some sort of navigation or filters, which help with orientation in the application.
 
 ## Example
 
