--- a/src/hooks/tooltip/tooltip.stories.mdx
+++ b/src/hooks/tooltip/tooltip.stories.mdx
@@ -10,7 +10,9 @@ import {
 
 # Tooltip
 
-General information about the component.
+Component that displays additional information about parent element. It is visible only when user hovering over parent element, or when parent element is focused.
+
+Most commonly displays description of a button's function or hint on keyboard shortcut to activate functionality.
 
 ## Example
 
