--- a/src/hooks/navigation/menubar.stories.mdx
+++ b/src/hooks/navigation/menubar.stories.mdx
@@ -8,11 +8,11 @@ import {
   NavigationReturnPropsSubmenuProps,
 } from './menubar.component';
 
-<Meta title="Aria Component/Menubar" />
+<Meta title="Aria Component/Navigation" />
 
 # Navigation
 
-General information about the component.
+Component that contains important links or buttons, which helps with navigating through website. It may contains dropdown menus for better clarity. Usually it is located on the top of the website.
 
 ## Example
 
