Fix typos, delete unnecessary comments

--- a/src/hooks/drawer/drawer.stories.mdx
+++ b/src/hooks/drawer/drawer.stories.mdx
@@ -9,9 +9,9 @@ import {
 
 # Drawer
 
-Component that is hidden by default and opened upon an action, usually a button click.
+A component that is hidden by default and is opened upon an action, usually a button interaction.
 
-Most commonly it contains some sort of navigation or filters, which help with orientation in the application.
+Most commonly it contains some sort of navigation or filters, which helps with orientation in the application.
 
 ## Example
 
