--- a/src/hooks/navigation/menubar.stories.mdx
+++ b/src/hooks/navigation/menubar.stories.mdx
@@ -12,7 +12,7 @@ import {
 
 # Navigation
 
-Component that contains important links or buttons, which helps with navigating through website. It may contains dropdown menus for better clarity. Usually it is located on the top of the website.
+A component that contains important links or buttons, which helps with navigating through the website. It may contain dropdown menus for better clarity. It's usually located on the top of the website.
 
 ## Example
 
