--- a/src/hooks/tooltip/tooltip.stories.mdx
+++ b/src/hooks/tooltip/tooltip.stories.mdx
@@ -10,9 +10,9 @@ import {
 
 # Tooltip
 
-Component that displays additional information about parent element. It is visible only when user hovering over parent element, or when parent element is focused.
+A component that displays informative text on hover, focus, or tap.
 
-Most commonly displays description of a button's function or hint on keyboard shortcut to activate functionality.
+It can be used to display a description of a button's function or hint on keyboard shortcut to activate functionality.
 
 ## Example
 
