--- a/src/hooks/listbox/listbox.stories.mdx
+++ b/src/hooks/listbox/listbox.stories.mdx
@@ -11,7 +11,7 @@ import {
 
 # Listbox
 
-Component that allows the user to choose one value from a list. When a listbox is inactive, it displays a single value. When activated, it displays a list of values, from which the user may select one. When the user selects a new value, listbox become inactive again, displaying the selected value.
+A component that allows the user to choose one value from a list. When a listbox is inactive, it displays a single value. When activated, it displays a list of values, from which the user may select one. When the user selects a new value, listbox becomes inactive again, displaying the selected value.
 
 ## Example
 
