--- a/src/hooks/modal/modal.stories.mdx
+++ b/src/hooks/modal/modal.stories.mdx
@@ -32,7 +32,6 @@ const Modal = () => {
   const { modalProps, closeButtonProps, descriptionTextProps } = useAriaModal({
     isOpen,
     onDismiss: () => setOpen(false),
-    description: 'A cool modal',
     id: 'modal-test-storybook',
   });
 
@@ -43,7 +42,7 @@ const Modal = () => {
       <div className={`backdrop ${isOpen ? '' : 'backdrop--hidden'}`}>
         <div className="modal" {...modalProps}>
           <h1 {...descriptionTextProps}>Modal Title</h1>
-          <button {...closeButtonProps}>Close</button>
+          <button {...closeButtonProps}>Close Modal</button>
         </div>
       </div>
     </>
