--- a/src/hooks/tabs/tabs.stories.mdx
+++ b/src/hooks/tabs/tabs.stories.mdx
@@ -1,7 +1,34 @@
-import React from 'react';
-import { useAriaTabs, TabsProps } from '.';
+import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs';
+import Tabs, { TabsHookProps, TabsHookReturnProps } from './tabs.component';
 
-import { StyledTabs } from './tabs.styles';
+<Meta title="Aria Component/Tabs" />
+
+# Tabs
+
+Tabs organize and allow navigation between groups of content that are related and at the same level of hierarchy.
+
+## Example
+
+<Canvas>
+  <Tabs />
+</Canvas>
+
+## Setup
+
+The `useAriaTabs` hook expects the following parameters:
+
+<ArgsTable of={TabsHookProps} sort="requiredFirst" />
+
+The hook returns an object with the following values:
+
+<ArgsTable of={TabsHookReturnProps} />
+
+## Component
+
+In order to create a fully accessible implementation of a drawer, your component should look like the following:
+
+```jsx
+import { useAriaTabs } from '@actum-digital/aria-hooks';
 
 const tabs = [
   {
@@ -24,12 +51,12 @@ const tabs = [
   },
 ];
 
-export const Tabs: React.FC<TabsProps> = () => {
+const Tabs = () => {
   const { tablistProps, tabProps, tabpanelProps, tabsProps } = useAriaTabs({});
 
   return (
-    <StyledTabs {...tabsProps}>
-      <div {...tablistProps} className="tablist">
+    <div {...tabsProps}>
+      <div {...tablistProps}>
         {tabs.map(({ label, id }, idx) => (
           <button {...tabProps(id, idx)} key={id}>
             {label}
@@ -37,16 +64,12 @@ export const Tabs: React.FC<TabsProps> = () => {
         ))}
       </div>
       {tabs.map(({ label, content, id }, idx) => (
-        <div {...tabpanelProps(id, idx)} key={id} className="tabpanel">
+        <div {...tabpanelProps(id, idx)} key={id}>
           <h2>{label}</h2>
           <p>{content}</p>
         </div>
       ))}
-    </StyledTabs>
+    </div>
   );
 };
-
-export default {
-  title: 'Aria Component/Tabs',
-  component: Tabs,
-};
+```
