--- a/src/hooks/accordion/accordion.stories.mdx
+++ b/src/hooks/accordion/accordion.stories.mdx
@@ -31,7 +31,7 @@ The hook returns an object with the following values:
 
 ## Component
 
-In order to create a fully accessible implementation of a accordion, your component should look like the following:
+In order to create a fully accessible implementation of an accordion, your component should look like the following:
 
 ```jsx
 import { useAriaAccordion } from '@actum-digital/aria-hooks';
