--- a/src/hooks/drawer/drawer.stories.mdx
+++ b/src/hooks/drawer/drawer.stories.mdx
@@ -7,6 +7,12 @@ import {
 
 <Meta title="Aria Component/Drawer" />
 
+# Drawer
+
+A component that is hidden by default and is opened upon an action, usually a button interaction.
+
+Most commonly it contains some sort of navigation or filters, which helps with orientation in the application.
+
 ## Example
 
 <Canvas>
