--- a/src/hooks/navigation/menubar.stories.mdx
+++ b/src/hooks/navigation/menubar.stories.mdx
@@ -8,7 +8,11 @@ import {
   NavigationReturnPropsSubmenuProps,
 } from './menubar.component';
 
-<Meta title="Aria Component/Menubar" />
+<Meta title="Aria Component/Navigation" />
+
+# Navigation
+
+A component that contains important links or buttons, which helps with navigating through the website. It may contain dropdown menus for better clarity. It's usually located on the top of the website.
 
 ## Example
 
