--- a/src/hooks/modal/modal.stories.mdx
+++ b/src/hooks/modal/modal.stories.mdx
@@ -3,6 +3,12 @@ import { Modal, ModalHookProps, ModalHookReturnProps } from './modal.component';
 
 <Meta title="Aria Component/Modal" />
 
+# Modal
+
+A component that creates a mode that disables the main window but keeps it visible, with the modal window as a child window in front of it. Users must interact with the modal window before they can return to the parent window.
+
+Most commonly it should draw attention to vital pieces of information or block the application flow until the information required to continue is entered.
+
 ## Example
 
 <Canvas>
