--- a/src/hooks/tooltip/tooltip.stories.mdx
+++ b/src/hooks/tooltip/tooltip.stories.mdx
@@ -8,6 +8,12 @@ import {
 
 <Meta title="Aria Component/Tooltip" />
 
+# Tooltip
+
+A component that displays informative text on hover, focus, or tap.
+
+It can be used to display a description of a button's function or hint on keyboard shortcut to activate functionality.
+
 ## Example
 
 <Canvas>
