Polish tabs styles

--- a/src/hooks/tabs/tabs.stories.mdx
+++ b/src/hooks/tabs/tabs.stories.mdx
@@ -25,7 +25,7 @@ The hook returns an object with the following values:
 
 ## Component
 
-In order to create a fully accessible implementation of a drawer, your component should look like the following:
+In order to create a fully accessible implementation of tabs, your component should look like the following:
 
 ```jsx
 import { useAriaTabs } from '@actum-digital/aria-hooks';
