--- a/src/hooks/listbox/listbox.stories.mdx
+++ b/src/hooks/listbox/listbox.stories.mdx
@@ -43,7 +43,7 @@ The `entryItemProps` value is a function that expects a unique ID as a parameter
 
 ## Component
 
-In order to create a fully accessible implementation of a drawer, your component should look like the following:
+In order to create a fully accessible implementation of a listbox, your component should look like the following:
 
 ```jsx
 import { useAriaListbox } from '@actum-digital/aria-hooks';
