--- a/src/hooks/drawer/drawer.stories.mdx
+++ b/src/hooks/drawer/drawer.stories.mdx
@@ -21,7 +21,7 @@ Most commonly it contains some sort of navigation or filters, which helps with o
 
 ## Setup
 
-Note: Even though there are visual differences between modal and drawer components, they are the same from an accessibility point of view. Knowing that we can use the `useAriaModal` hook to make our drawer accessible.
+Note: Even though there are visual differences between modal and drawer components, they are the same from an accessibility point of view. We can use the `useAriaModal` hook to make our drawer accessible.
 
 The `useAriaModal` hook expects the following parameters:
 
