--- a/src/hooks/accordion/accordion.stories.mdx
+++ b/src/hooks/accordion/accordion.stories.mdx
@@ -2,7 +2,9 @@ import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs';
 import {
   Accordion,
   AccordionHookProps,
-  AccordionHookReturnProps,
+  AccordionReturnPropsAccordionProps,
+  AccordionReturnPropsButtonProps,
+  AccordionReturnPropsPanelProps,
 } from './accordion.component';
 
 <Meta title="Aria Component/Accordion" />
@@ -21,15 +23,41 @@ Each item can be 'collapsed' with just a short label visible or 'expanded' to sh
 
 ## Setup
 
-The `useAriaAccordion` hook expects the following parameters:
+```jsx
+const { accordionProps, buttonProps, panelProps } = useAriaAccordion({
+  id: 'Accordion1',
+});
+```
+
+The `useAriaAccordion` hook expects an object with following parameters:
 
 <ArgsTable of={AccordionHookProps} sort="requiredFirst" />
 
-The hook returns an object with the following values:
+The hook returns an object with the following properties:
 
-<ArgsTable of={AccordionHookReturnProps} />
+### accordionProps
 
-## Component
+It is an object with following properties:
+
+<ArgsTable of={AccordionReturnPropsAccordionProps} />
+
+### buttonProps
+
+It is a fuction that accepts two parameters: `buttonProps(id: string, isOpenByDefault?: boolean)`.
+
+The fuction returns object with the following values:
+
+<ArgsTable of={AccordionReturnPropsButtonProps} />
+
+### panelProps
+
+It is a fuction that accepts two parameters: `panelProps(id: string, isOpenByDefault?: boolean)`.
+
+The fuction returns object with the following values:
+
+<ArgsTable of={AccordionReturnPropsPanelProps} />
+
+## Example component
 
 In order to create a fully accessible implementation of an accordion, your component should look like the following:
 
