Listbox docs fixes

--- a/src/hooks/drawer/drawer.stories.mdx
+++ b/src/hooks/drawer/drawer.stories.mdx
@@ -25,7 +25,7 @@ Most commonly it contains some sort of navigation or filters, which helps with o
 
 Visit [Modal documentation](/story/aria-component-modal--page) for further details
 
-## Component
+## Example component
 
 In order to create a fully accessible implementation of a drawer, your component should look like the following:
 
