--- a/src/hooks/drawer/drawer.stories.mdx
+++ b/src/hooks/drawer/drawer.stories.mdx
@@ -21,15 +21,9 @@ Most commonly it contains some sort of navigation or filters, which helps with o
 
 ## Setup
 
-Note: Even though there are visual differences between modal and drawer components, they are the same from an accessibility point of view. We can use the `useAriaModal` hook to make our drawer accessible.
+> _Note: Even though there are visual differences between modal and drawer components, they are the same from an accessibility point of view. We can use the `useAriaModal` hook to make our drawer accessible._
 
-The `useAriaModal` hook expects the following parameters:
-
-<ArgsTable of={DrawerHookProps} sort="requiredFirst" />
-
-The hook returns an object with the following values:
-
-<ArgsTable of={DrawerHookReturnProps} />
+Visit [Modal documentation](/story/aria-component-modal--page) for further details
 
 ## Component
 
