--- a/src/hooks/navigation/menubar.stories.mdx
+++ b/src/hooks/navigation/menubar.stories.mdx
@@ -47,9 +47,9 @@ It is an object with following properties:
 
 ### menuItemProps
 
-It is a fuction that accepts two parameters: `menuItemProps(index: number, hasSubmenu?: boolean)`.
+It is a function that accepts two parameters: `menuItemProps(index: number, hasSubmenu?: boolean)`.
 
-The fuction returns object with the following values:
+The function returns object with the following values:
 
 <ArgsTable of={NavigationReturnPropsMenuItemProps} />
 
@@ -61,9 +61,9 @@ It is an object with following properties:
 
 ### submenuProps
 
-It is a fuction that accepts one parameter: `submenuProps(label: string)`.
+It is a function that accepts one parameter: `submenuProps(label: string)`.
 
-The fuction returns object with the following values:
+The function returns object with the following values:
 
 <ArgsTable of={NavigationReturnPropsSubmenuProps} />
 
