--- a/src/hooks/accordion/accordion.stories.mdx
+++ b/src/hooks/accordion/accordion.stories.mdx
@@ -43,17 +43,17 @@ It is an object with following properties:
 
 ### buttonProps
 
-It is a fuction that accepts two parameters: `buttonProps(id: string, isOpenByDefault?: boolean)`.
+It is a function that accepts two parameters: `buttonProps(id: string, isOpenByDefault?: boolean)`.
 
-The fuction returns object with the following values:
+The function returns object with the following values:
 
 <ArgsTable of={AccordionReturnPropsButtonProps} />
 
 ### panelProps
 
-It is a fuction that accepts two parameters: `panelProps(id: string, isOpenByDefault?: boolean)`.
+It is a function that accepts two parameters: `panelProps(id: string, isOpenByDefault?: boolean)`.
 
-The fuction returns object with the following values:
+The function returns object with the following values:
 
 <ArgsTable of={AccordionReturnPropsPanelProps} />
 
