--- a/src/hooks/modal/modal.stories.mdx
+++ b/src/hooks/modal/modal.stories.mdx
@@ -1,5 +1,11 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs';
-import { Modal, ModalHookProps, ModalHookReturnProps } from './modal.component';
+import {
+  Modal,
+  ModalHookProps,
+  ModalHookReturnProps,
+  CloseButtonReturnProps,
+  DescriptionTextReturnProps,
+} from './modal.component';
 
 <Meta title="Aria Component/Modal" />
 
@@ -17,13 +23,45 @@ Most commonly it should draw attention to vital pieces of information or block t
 
 ## Setup
 
+### Example usage
+
+```js
+const { modalProps, closeButtonProps, descriptionTextProps } = useAriaModal({
+  id: 'modal-test-storybook',
+  isOpen,
+  onDismiss: () => {},
+  closeLabel: 'Close modal',
+  dialogLabel: 'Email confirmation modal',
+});
+```
+
+### Expected properties
+
 The `useAriaModal` hook expects the following parameters:
 
 <ArgsTable of={ModalHookProps} sort="requiredFirst" />
 
-The hook returns an object with the following values:
+### Returned properties
+
+The hook returns an object with the following properties:
+
+#### modalProps
+
+It is an object with following properties:
 
 <ArgsTable of={ModalHookReturnProps} />
+
+#### closeButtonProps
+
+It is an object with following properties:
+
+<ArgsTable of={CloseButtonReturnProps} />
+
+#### descriptionTextProps
+
+It is an object with following properties:
+
+<ArgsTable of={DescriptionTextReturnProps} />
 
 ## Component
 
@@ -65,11 +103,9 @@ const Modal = () => {
   bottom: 0;
   top: 0;
   right: 0;
-
   display: flex;
   align-items: center;
   justify-content: center;
-
   background: #0007;
 }
 
@@ -80,7 +116,6 @@ const Modal = () => {
 .modal {
   width: 50%;
   height: 50%;
-
   background: white;
 }
 ```
