--- a/src/hooks/listbox/listbox.stories.mdx
+++ b/src/hooks/listbox/listbox.stories.mdx
@@ -21,7 +21,7 @@ A component that allows the user to choose one value from a list. When a listbox
 
 ## Setup
 
-### Example
+### Example usage
 
 ```js
 const { triggerProps, listboxProps, entryItemProps } = useAriaListbox({
