--- a/src/hooks/modal/modal.stories.mdx
+++ b/src/hooks/modal/modal.stories.mdx
@@ -63,7 +63,7 @@ It is an object with following properties:
 
 <ArgsTable of={DescriptionTextReturnProps} />
 
-## Component
+## Example component
 
 In order to create a fully accessible implementation of a modal using `@actum/aria-hooks`, your component should look like the following:
 
