--- a/src/hooks/tabs/tabs.stories.mdx
+++ b/src/hooks/tabs/tabs.stories.mdx
@@ -61,7 +61,7 @@ The function returns object with the following values:
 
 <ArgsTable of={TabPanelReturnProps} />
 
-## Component
+## Example component
 
 In order to create a fully accessible implementation of tabs, your component should look like the following:
 
