--- a/src/hooks/tooltip/tooltip.stories.mdx
+++ b/src/hooks/tooltip/tooltip.stories.mdx
@@ -55,7 +55,7 @@ It is an object with following properties:
 
 <ArgsTable of={TooltipComponentTipProps} />
 
-## Component
+## Example component
 
 In order to create a fully accessible implementation of a tooltip, your component should look like the following:
 
