--- a/src/hooks/accordion/accordion.stories.mdx
+++ b/src/hooks/accordion/accordion.stories.mdx
@@ -23,25 +23,31 @@ Each item can be 'collapsed' with just a short label visible or 'expanded' to sh
 
 ## Setup
 
+### Example usage
+
 ```jsx
 const { accordionProps, buttonProps, panelProps } = useAriaAccordion({
   id: 'Accordion1',
 });
 ```
 
+### Expected properties
+
 The `useAriaAccordion` hook expects an object with following parameters:
 
 <ArgsTable of={AccordionHookProps} sort="requiredFirst" />
 
+### Returned properties
+
 The hook returns an object with the following properties:
 
-### accordionProps
+#### accordionProps
 
 It is an object with following properties:
 
 <ArgsTable of={AccordionReturnPropsAccordionProps} />
 
-### buttonProps
+#### buttonProps
 
 It is a function that accepts two parameters: `buttonProps(id: string, isOpenByDefault?: boolean)`.
 
@@ -49,7 +55,7 @@ The function returns object with the following values:
 
 <ArgsTable of={AccordionReturnPropsButtonProps} />
 
-### panelProps
+#### panelProps
 
 It is a function that accepts two parameters: `panelProps(id: string, isOpenByDefault?: boolean)`.
 
