--- a/src/hooks/accordion/accordion.stories.mdx
+++ b/src/hooks/accordion/accordion.stories.mdx
@@ -49,7 +49,7 @@ It is an object with following properties:
 
 #### buttonProps
 
-It is a function that accepts two parameters: `buttonProps(id: string, isOpenByDefault?: boolean)`.
+A function that accepts two parameters: `buttonProps(id: string, isOpenByDefault?: boolean)`.
 
 The function returns object with the following values:
 
