--- a/src/hooks/listbox/listbox.stories.mdx
+++ b/src/hooks/listbox/listbox.stories.mdx
@@ -21,27 +21,51 @@ A component that allows the user to choose one value from a list. When a listbox
 
 ## Setup
 
-The `useAriaListbox` hook expects the following parameters:
+### Example usage
+
+```js
+const { triggerProps, listboxProps, entryItemProps } = useAriaListbox({
+  id: 'listbox-component',
+  closeOnSelect: true,
+  isOpen: true,
+  onSelect: () => {},
+  onToggle: () => {},
+  selectedValue: 'item-id',
+  triggerLabel: 'Open listbox',
+});
+```
+
+### Expected properties
+
+The `useAriaListbox` hook expects an object with following properties:
 
 <ArgsTable of={ListboxHookProps} sort="requiredFirst" />
 
+### Returned properties
+
 The hook returns an object with the following values:
 
-### triggerProps
+#### triggerProps
+
+It is an object with following properties:
 
 <ArgsTable of={ListboxTriggerHookReturnProps} />
 
-### listboxProps
+#### listboxProps
+
+It is an object with following properties:
 
 <ArgsTable of={ListboxBoxHookReturnProps} />
 
-### entryItemProps
+#### entryItemProps
 
-The `entryItemProps` value is a function that expects a unique ID as a parameter. The function, then, returns an object with the following values:
+It is a function that accepts one parameter: `entryItemProps(id: string)`.
+
+The function returns object with the following values:
 
 <ArgsTable of={ListboxEntryHookReturnProps} />
 
-## Component
+## Example component
 
 In order to create a fully accessible implementation of a listbox, your component should look like the following:
 
