--- a/src/hooks/tooltip/tooltip.stories.mdx
+++ b/src/hooks/tooltip/tooltip.stories.mdx
@@ -22,21 +22,40 @@ It can be used to display a description of a button's function or hint on keyboa
 
 ## Setup
 
+### Example usage
+
+```js
+const { buttonProps, toolTipProps } = useAriaToolTip({
+  id: 'tooltip',
+  isShowing: false,
+  onRelease: () => {},
+  onDismiss: () => {},
+});
+```
+
+### Expected properties
+
 The `useAriaTooltip` hook expects the following parameters:
 
 <ArgsTable of={TooltipComponentProps} sort="requiredFirst" />
 
-The hook returns an object with the following values:
+### Returned properties
 
-### buttonProps
+The hook returns an object with the following properties:
+
+#### buttonProps
+
+It is an object with following properties:
 
 <ArgsTable of={TooltipComponentButtonProps} />
 
-### toolTipProps
+#### toolTipProps
+
+It is an object with following properties:
 
 <ArgsTable of={TooltipComponentTipProps} />
 
-## Component
+## Example component
 
 In order to create a fully accessible implementation of a tooltip, your component should look like the following:
 
